fix alignment and remove console clear script

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,6 +5,7 @@ header {
 	padding: 1.5rem;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	position: sticky;
 	top: 0;
 	z-index: 2;
